
--------------------------------------------------------------------------------


  Giada - Your Hardcore Loopmachine.

  Developed by Monocasual Laboratories

  www.giadamusic.com

  CHANGELOG
--------------------------------------------------------------------------------



0.9.5 --- 2015 . [dev]
- Fix deprecation warning in configure.ac


0.9.4 --- 2015 . 02 . 24
- Drag-n-drop now works also in existing channels
- Store 'resize recordings' flag in giada.conf
- Better management of duplicate samples
- Add more VST debug information
- Minor fixes and tweaks


0.9.3 --- 2015 . 02 . 01
- New GUI improvement: responsive and resizable columns
- Upgrade to FLTK 1.3.3
- More robust column handling mechanism
- Support for MIDI devices without note-off message (@blablack)
- Fix segfaults when saving a patch with missing plugins
- Fix many minor graphical bugs
- Fix wrong vector assignment in MIDI send event
- Fix reloaded patches with no right tempo/beats displayed
- Fix random odd frames when adding/moving events in Piano Roll
- Minor internal cleanup


0.9.2 --- 2014 . 11 . 29
- New grid layout in Sample Editor
- Load samples via drag n drop
- Add new utility functions: gTrim and gStripFileUrl
- Fix "normalize" button position in Sample Editor
- Minor waveform drawing optimizations
- Add missing files for RtAudio-mod compilation
- All one-shot mode, if fired manually, get the first frame truncated (fixed)


0.9.1 --- 2014 . 09 . 24
- Bring back custom version of rtAudio in source package
- Automatically turn up volume when adding new channel
- Updated 'misc' tab in configuration panel
- Fix startup crash on OS X
- Fix missing jack headers


0.9.0 --- 2014 . 08 . 18
- New full-screen GUI
- Multi-column support
- Advanced logging system
- Upgrade to RtAudio 4.1.1 and RtMidi 2.1.0
- Removed embedded RtAudio (thanks to Arty)
- Fix wrong processing of VST MIDI events on 64 bit version
- Fix stretched buttons when resizing sample editor window