@@ -1,10 +1,10 @@
-/* ---------------------------------------------------------------------
+/* -----------------------------------------------------------------------------
  *
  * Giada - Your Hardcore Loopmachine
  *
  * patch
  *
- * ---------------------------------------------------------------------
+ * -----------------------------------------------------------------------------
  *
  * Copyright (C) 2010-2015 Giovanni A. Zuliani | Monocasual
  *
@@ -24,7 +24,7 @@
  * along with Giada - Your Hardcore Loopmachine. If not, see
  * <http://www.gnu.org/licenses/>.
  *
- * ------------------------------------------------------------------ */
+ * -------------------------------------------------------------------------- */
 
 
 #include <stdint.h>
@@ -38,13 +38,16 @@
 #include "mixer.h"
 #include "channel.h"
 #include "log.h"
+#include "gd_mainWindow.h"
+#include "gg_keyboard.h"
 
 
-extern Mixer 		  G_Mixer;
-extern Conf 		  G_Conf;
+extern Mixer 		     G_Mixer;
+extern Conf 		     G_Conf;
 #ifdef WITH_VST
-extern PluginHost G_PluginHost;
+extern PluginHost    G_PluginHost;
 #endif
+extern gdMainWindow *mainWin;
 
 
 int Patch::open(const char *file)
@@ -65,7 +68,7 @@ int Patch::open(const char *file)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 void Patch::setDefault()
@@ -76,7 +79,7 @@ void Patch::setDefault()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::close()
@@ -85,7 +88,7 @@ int Patch::close()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 void Patch::getName()
@@ -95,7 +98,7 @@ void Patch::getName()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 std::string Patch::getSamplePath(int c)
@@ -106,7 +109,7 @@ std::string Patch::getSamplePath(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 float Patch::getPitch(int c)
@@ -120,7 +123,7 @@ float Patch::getPitch(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getNumChans()
@@ -131,7 +134,16 @@ int Patch::getNumChans()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
+
+
+int Patch::getNumColumns()
+{
+	return atoi(getValue("columns").c_str());
+}
+
+
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getColumn(int c)
@@ -144,7 +156,7 @@ int Patch::getColumn(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getIndex(int c)
@@ -158,7 +170,7 @@ int Patch::getIndex(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 float Patch::getVol(int c)
@@ -172,7 +184,7 @@ float Patch::getVol(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getMode(int c)
@@ -186,7 +198,7 @@ int Patch::getMode(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getMute(int c)
@@ -197,7 +209,7 @@ int Patch::getMute(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getMute_s(int c)
@@ -208,7 +220,7 @@ int Patch::getMute_s(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getSolo(int c)
@@ -219,7 +231,7 @@ int Patch::getSolo(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getType(int c)
@@ -233,7 +245,7 @@ int Patch::getType(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getBegin(int c)
@@ -250,7 +262,7 @@ int Patch::getBegin(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getEnd(int c, unsigned size)
@@ -272,7 +284,7 @@ int Patch::getEnd(int c, unsigned size)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 float Patch::getBoost(int c)
@@ -286,7 +298,7 @@ float Patch::getBoost(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 float Patch::getPanLeft(int c)
@@ -304,7 +316,7 @@ float Patch::getPanLeft(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getKey(int c)
@@ -317,7 +329,7 @@ int Patch::getKey(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 float Patch::getPanRight(int c)
@@ -335,7 +347,7 @@ float Patch::getPanRight(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 bool Patch::getRecActive(int c)
@@ -346,7 +358,7 @@ bool Patch::getRecActive(int c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 float Patch::getOutVol()
@@ -355,7 +367,7 @@ float Patch::getOutVol()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 float Patch::getInVol()
@@ -364,7 +376,7 @@ float Patch::getInVol()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 float Patch::getBpm()
@@ -376,7 +388,7 @@ float Patch::getBpm()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getBars()
@@ -388,7 +400,7 @@ int Patch::getBars()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getBeats()
@@ -400,7 +412,7 @@ int Patch::getBeats()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getQuantize()
@@ -412,7 +424,7 @@ int Patch::getQuantize()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 bool Patch::getMetronome()
@@ -424,7 +436,7 @@ bool Patch::getMetronome()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getLastTakeId()
@@ -433,7 +445,7 @@ int Patch::getLastTakeId()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::getSamplerate()
@@ -445,7 +457,7 @@ int Patch::getSamplerate()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 uint32_t Patch::getMidiValue(int i, const char *c)
@@ -456,7 +468,7 @@ uint32_t Patch::getMidiValue(int i, const char *c)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::readRecs()
@@ -512,7 +524,7 @@ int Patch::readRecs()
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 #ifdef WITH_VST
@@ -559,7 +571,7 @@ int Patch::readPlugins()
 #endif
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 int Patch::write(const char *file, const char *name, bool project)
@@ -583,6 +595,11 @@ int Patch::write(const char *file, const char *name, bool project)
 	fprintf(fp, "lastTakeId=%d\n", lastTakeId);
 	fprintf(fp, "samplerate=%d\n", G_Conf.samplerate);	// original samplerate when the patch was saved
 	fprintf(fp, "channels=%d\n",   G_Mixer.channels.size);
+	fprintf(fp, "columns=%d\n",    mainWin->keyboard->getTotalColumns());
+
+	//for (unsigned i=0; i<mainWin->keyboard->getTotalColumns(); i++) {
+	//	fprintf(fp, "columnSize%d=%d\n", i, mainWin->keyboard->getColumnWidth(i));
+	//}
 
 	for (unsigned i=0; i<G_Mixer.channels.size; i++) {
 		fprintf(fp, "# --- channel %d --- \n", i);
@@ -649,7 +666,7 @@ int Patch::write(const char *file, const char *name, bool project)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 #ifdef WITH_VST
 
@@ -691,7 +708,7 @@ int Patch::readMasterPlugins(int type)
 }
 
 
-/* ------------------------------------------------------------------ */
+/* -------------------------------------------------------------------------- */
 
 
 void Patch::writeMasterPlugins(int type)
